Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: N/A
-
Fix Version/s: 10.6.0
-
Component/s: Full-text Search, JSON
-
Labels:None
Description
SELECT val, MATCH(val) AGAINST( 'MariaDB') FROM JSON_TABLE('{"db":"xx"}', '$' COLUMNS(val VARCHAR(32) PATH '$**.*')) AS jt; |
bb-10.6-mdev17399-hf 49603a019 |
#3 <signal handler called>
|
#4 0x0000561b54dc019d in hton_name (hton=0x561b59205520 <table_function_hton>) at /data/src/bb-10.6-mdev17399-hf/sql/handler.h:1728
|
#5 0x0000561b54dc0327 in handler::table_type (this=0x61b00003c728) at /data/src/bb-10.6-mdev17399-hf/sql/handler.h:4154
|
#6 0x0000561b5586205c in Item_func_match::fix_fields (this=0x62b000038e28, thd=0x62b000069288, ref=0x62b000038f98) at /data/src/bb-10.6-mdev17399-hf/sql/item_func.cc:6266
|
#7 0x0000561b54c1cac3 in Item::fix_fields_if_needed (this=0x62b000038e28, thd=0x62b000069288, ref=0x62b000038f98) at /data/src/bb-10.6-mdev17399-hf/sql/item.h:988
|
#8 0x0000561b54c1cafd in Item::fix_fields_if_needed_for_scalar (this=0x62b000038e28, thd=0x62b000069288, ref=0x62b000038f98) at /data/src/bb-10.6-mdev17399-hf/sql/item.h:992
|
#9 0x0000561b54d43f4b in setup_fields (thd=0x62b000069288, ref_pointer_array=..., fields=..., column_usage=MARK_COLUMNS_READ, sum_func_list=0x62b00003b4a8, pre_fix=0x62b000038710, allow_sum_func=true) at /data/src/bb-10.6-mdev17399-hf/sql/sql_base.cc:7668
|
#10 0x0000561b54f757ac in JOIN::prepare (this=0x62b00003b180, tables_init=0x62b00003a138, conds_init=0x0, og_num=0, order_init=0x0, skip_order_by=false, group_init=0x0, having_init=0x0, proc_param_init=0x0, select_lex_arg=0x62b0000385a8, unit_arg=0x62b00006d460) at /data/src/bb-10.6-mdev17399-hf/sql/sql_select.cc:1254
|
#11 0x0000561b54f9b26b in mysql_select (thd=0x62b000069288, tables=0x62b00003a138, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147748608, result=0x62b00003b150, unit=0x62b00006d460, select_lex=0x62b0000385a8) at /data/src/bb-10.6-mdev17399-hf/sql/sql_select.cc:4723
|
#12 0x0000561b54f6c86a in handle_select (thd=0x62b000069288, lex=0x62b00006d398, result=0x62b00003b150, setup_tables_done_option=0) at /data/src/bb-10.6-mdev17399-hf/sql/sql_select.cc:417
|
#13 0x0000561b54ed6a0a in execute_sqlcom_select (thd=0x62b000069288, all_tables=0x62b00003a138) at /data/src/bb-10.6-mdev17399-hf/sql/sql_parse.cc:6230
|
#14 0x0000561b54ec5cec in mysql_execute_command (thd=0x62b000069288) at /data/src/bb-10.6-mdev17399-hf/sql/sql_parse.cc:3926
|
#15 0x0000561b54ee1cb5 in mysql_parse (thd=0x62b000069288, rawbuf=0x62b000038440 "SELECT val, MATCH(val) AGAINST( 'MariaDB') FROM JSON_TABLE('{\"db\":\"xx\"}', '$' COLUMNS(val VARCHAR(32) PATH '$**.*')) AS jt", length=122, parser_state=0x7fbdedd037b0) at /data/src/bb-10.6-mdev17399-hf/sql/sql_parse.cc:8000
|
#16 0x0000561b54eb86f0 in dispatch_command (command=COM_QUERY, thd=0x62b000069288, packet=0x62900024e289 "SELECT val, MATCH(val) AGAINST( 'MariaDB') FROM JSON_TABLE('{\"db\":\"xx\"}', '$' COLUMNS(val VARCHAR(32) PATH '$**.*')) AS jt", packet_length=122, blocking=true) at /data/src/bb-10.6-mdev17399-hf/sql/sql_parse.cc:1886
|
#17 0x0000561b54eb542b in do_command (thd=0x62b000069288, blocking=true) at /data/src/bb-10.6-mdev17399-hf/sql/sql_parse.cc:1397
|
#18 0x0000561b552f6ecd in do_handle_one_connection (connect=0x61100000ad48, put_in_cache=true) at /data/src/bb-10.6-mdev17399-hf/sql/sql_connect.cc:1410
|
#19 0x0000561b552f682a in handle_one_connection (arg=0x61100000ac08) at /data/src/bb-10.6-mdev17399-hf/sql/sql_connect.cc:1312
|
#20 0x0000561b5600117f in pfs_spawn_thread (arg=0x616000102a08) at /data/src/bb-10.6-mdev17399-hf/storage/perfschema/pfs.cc:2201
|
#21 0x00007fbdf73d9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
|
#22 0x00007fbdf6fad293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|