MDEV-25229 SON_TABLE: Server crashes in hton_name upon MATCH .. AGAINST.

No plugin for the JSON_TABLE so get the storage type name directly.